# m32-assignment

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schema.py  0002_pending_action.py  0003_message_artifacts.py  0004_organizations.py  0005_message_data_parts.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: conversation.py  graph.py  people.py  state.py
backend/app/agents/nodes/: __init__.py  comms.py  confirm.py  edit.py  extractor.py  respond.py  router.py  summarize.py
backend/app/agents/tools/: __init__.py  board_tools.py  composio_tools.py  session_tools.py
backend/app/api/: deps.py
backend/app/api/routes/: actions.py  auth.py  calendar.py  chat.py  integrations.py  meetings.py  models.py  orgs.py  sessions.py
backend/app/auth/: jwt.py  password.py
backend/app/llm/: models.py  provider.py
backend/app/models/: __init__.py  action_item.py  base.py  chat_session.py  meeting.py  message.py  organization.py  user.py
backend/app/schemas/: action.py  auth.py  chat.py  org.py
backend/app/scripts/: composio_connect.py
backend/app/services/: ai_stream.py  orgs.py  transcript.py
backend/tests/: test_agent_logic.py  test_smoke.py
frontend/: .env.example  Dockerfile.dev  components.json  eslint.config.js  index.html  package.json  vercel.json
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: protected-route.tsx
(+37 files in other folders)
